# SpeakerRecognitionLock

./: .gitignore  README.md  SpeakerRecognitionPractice.ipynb  requirements.txt  test1.m4a
feather/: application.lua  init.lua
websocket_server/: audioInterface.py  server.py
workspace/nucleo144/: .project  CMakeLists.txt  Config1.cfg  LinkerScript.ld  Sources.cmake  build.py  flash.py
workspace/nucleo144/CMSIS/device/: stm32l4xx.h
workspace/nucleo144/Debug/: makefile  objects.list  sources.mk
workspace/nucleo144/Debug/HAL_Driver/Src/: subdir.mk
workspace/nucleo144/Debug/HAL_Driver/Src/Legacy/: subdir.mk
workspace/nucleo144/Debug/Utilities/STM32L4xx_Nucleo_144/: subdir.mk
workspace/nucleo144/Debug/src/: subdir.mk
workspace/nucleo144/Debug/startup/: subdir.mk
workspace/nucleo144/HAL_Driver/Inc/: stm32l4xx_hal_spi.h
workspace/nucleo144/Utilities/STM32L4xx_Nucleo_144/: stm32l4xx_nucleo_144.c  stm32l4xx_nucleo_144.h
workspace/nucleo144/inc/: ESP8266.h  ErrorState.h  FlashDriver.h  InitState.h  LockedState.h  SPH0645.h  TestState.h  TrainState.h  UnlockedState.h  adc.h  bluetooth.h  button.h  common.h  error.h  events.h  fsm_evt_queue.h  main.h  microphone.h  server.h  state_machine.h  stm32_assert.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
workspace/nucleo144/src/: ESP8266.c  ErrorState.c  FlashDriver.c  InitState.c  LockedState.c  SPH0645.c  TestState.c  TrainState.c  UnlockedState.c  adc.c  bluetooth.c  button.c  error.c  events.c  fsm_evt_queue.c  main.c  microphone.c  server.c  state_machine.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
